RESOLVED FIXED194734
https://device.login.microsoftonline.com is hanging on STP75
https://bugs.webkit.org/show_bug.cgi?id=194734
Summary https://device.login.microsoftonline.com is hanging on STP75
youenn fablet
Reported 2019-02-15 17:54:22 PST
Attachments
Patch (3.88 KB, patch)
2019-02-15 17:58 PST, youenn fablet
no flags
youenn fablet
Comment 1 2019-02-15 17:54:40 PST
youenn fablet
Comment 2 2019-02-15 17:58:49 PST
Jiewen Tan
Comment 3 2019-02-15 18:14:49 PST
Comment on attachment 362195 [details] Patch LGTM. r=me. Could you verify that you can reproduce the bug in tlstestwebkit.org by not having the client certificate and clicking the mandatory client certificate link?
Geoffrey Garen
Comment 4 2019-02-15 20:05:46 PST
Jiewen, can you suggest a way to test this code path in an automated way?
youenn fablet
Comment 5 2019-02-15 20:39:54 PST
(In reply to Jiewen Tan from comment #3) > Comment on attachment 362195 [details] > Patch > > LGTM. r=me. Could you verify that you can reproduce the bug in > tlstestwebkit.org by not having the client certificate and clicking the > mandatory client certificate link? I cannot load tlstestwebkit.org right now and might not be able to test it soon. It would be nice if you could validate it. I'll put the patch in cq? (In reply to Geoffrey Garen from comment #4) > Jiewen, can you suggest a way to test this code path in an automated way? I wonder whether WPT server has some support for scripting connection setup. If not, it might be interesting to file an issue on GitHub.
Jiewen Tan
Comment 6 2019-02-15 23:57:20 PST
(In reply to Geoffrey Garen from comment #4) > Jiewen, can you suggest a way to test this code path in an automated way? I don't think there is any at this moment. The hardest part here is to config the server to request a client certificate.
Geoffrey Garen
Comment 7 2019-02-16 09:11:57 PST
> I don't think there is any at this moment. The hardest part here is to > config the server to request a client certificate. We have run-webkit-httpd, and it can run arbitrary cgi scripts. Can we use that mechanism to request a client certificate?
WebKit Commit Bot
Comment 8 2019-02-17 22:49:07 PST
Comment on attachment 362195 [details] Patch Clearing flags on attachment: 362195 Committed r241658: <https://trac.webkit.org/changeset/241658>
WebKit Commit Bot
Comment 9 2019-02-17 22:49:09 PST
All reviewed patches have been landed. Closing bug.
Jiewen Tan
Comment 10 2019-02-18 11:15:43 PST
(In reply to Geoffrey Garen from comment #7) > > I don't think there is any at this moment. The hardest part here is to > > config the server to request a client certificate. > > We have run-webkit-httpd, and it can run arbitrary cgi scripts. Can we use > that mechanism to request a client certificate? Thanks Geoff for your input. I will address it in <rdar://problem/35927938>.
Note You need to log in before you can comment on or make changes to this bug.